--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ GITHUB_SECRET=98168a699f96ec5d1a708dd0a83f06c3bfd902c7
 
 GOOGLE_CLIENT_ID=850689375221-e25uaib6jm0bc3ufhfktpdevkm3kns97.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dkrjmsjdh"
